--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -69,9 +69,8 @@
     margin: 0 10px;
     overflow: hidden;
     white-space: nowrap;
-    animation:
-        typing 3.5s steps(40, end),
-        blink-caret .75s step-end infinite;
+    width: 0;
+    animation: typing 2.5s forwards;
 }
 
 .window {
@@ -101,13 +100,48 @@
 }
 
 @keyframes typing {
-    from {
-        width: 0
+    0% { 
+        width: 0; 
     }
+    5% { 
+        width: 5%; 
+    }
+    10% { 
+        width: 10%; 
+    }
+    15% { 
+        width: 15%; 
+    }
+    20% { 
+        width: 20%;
+        transition-timing-function: ease-out; 
+    }
+    30% { 
+        width: 35%;
+        transition-timing-function: ease-in; 
+    }
+    40% { 
+        width: 45%;
+        transition-timing-function: ease-out; 
+    }
+    60% { 
+        width: 70%;
+        transition-timing-function: ease-in; 
+    }
+    80% { 
+        width: 85%; 
+    }
+    90% { 
+        width: 95%; 
+    }
+    100% { 
+        width: 100%; 
+    }
+}
 
-    to {
-        width: 100%
-    }
+// Add delay for the second typewriter
+div.typewriter:nth-child(3) {
+    animation-delay: 1.5s;
 }
 
 @media (max-width: 600px) {
